# readest

./: .gitmodules  pnpm-lock.yaml
.github/workflows/: android-e2e.yml  (+5 more)
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/: Cargo.toml  LICENSE  README.md  build.rs
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/: AndroidManifest.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-ar/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-bn/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-de/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-es/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-fr/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-hi/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-in/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-it/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/android/src/main/res/values-ja/: strings.xml
apps/readest-app/src-tauri/plugins/tauri-plugin-webview-upgrade/src/: lib.rs
(+45 files in other folders)
